# paradedup

./: .flake8  .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: syntax-and-unittest.yml
deduplication/: __main__.py  candidate_ranker.py  candidate_searcher.py  document_processing.py  minhashing.py  pipeline.py  preprocessor.py
deduplication/cli/: controller.py  interface.py  use_case.py
tests/: test_candidate_ranker.py  test_candidate_searcher.py  test_cli_interface.py  test_controller.py  test_document_processing.py  test_integration.py  test_minhashing.py  test_pipeline.py  test_preprocessor.py
tests/testdata/nested/subdir1/dir1/: file111.txt
tests/testdata/nested/subdir1/dir2/: file123.txt
tests/testdata/nested/subdir2/: file212.txt
tests/testdata/txt/: file1.txt  file2.txt  file3.txt
