[project]
name = "paradedup"
version = "0.0.1"
authors = [{name = "Luise Köhler", email = "luise.sj.koehler@gmail.com"}]
description = "Find near-duplicates on paragraph level"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["datasketch>=1.5.*"]
license = {file = "LICENSE"}
classifiers = [
"Programming Language :: Python :: 3.8+",
"License :: OSI Approved :: GPL-3.0 license",
]

[project.urls]
"Homepage" = "https://github.com/knit-bee/paradedup"
"Bug Tracker" = "https://github.com/knit-bee/paradedup/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tools.setuptools.packages.find]
exclude = ["tests"]
namespace = false

[project.scripts]
tei-transform = "deduplication.__main__:main"

# testing and dev tools
[project.optional-dependencies]
test = ["pytest>=7"]
checks = [
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.7",
    "coverage>6.0",
    "isort>=5.9.0"
    ]

[tool.mypy]
ignore_missing_imports = true

[tool.isort]
profile = "black"
