[metadata]
author = luise.sj.koehler@gmail.com

[options]
install_requires =
  datasketch >= 1.5.*

packages = find:

[options.packages.find]
exclude =
  tests

[mypy]
ignore_missing_imports=True

[flake8]
exclude =
  site-packages
filename =
  *.py
ignore = E203
max_line_length=127

[isort]
profile=black
